Findbugs and Checkstyle enhancements